WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12902
Pressing return key doesn't move caret to next line after applying a font color in GMail
https://bugs.webkit.org/show_bug.cgi?id=12902
Summary
Pressing return key doesn't move caret to next line after applying a font col...
Adele Peterson
Reported
2007-02-26 15:33:15 PST
* STEPS TO REPRODUCE 1. With TOT, login to your gmail account 2. Create a rich text message 3. Choose a new font color from the tool palette. 4. Start type text in the message. With the caret at the end of this line, press the return key 5. Instead of a new line being created, the caret still remains at the current line * RESULTS The caret should move to the new line but doesn't
Attachments
test case
(535 bytes, text/html)
2007-02-26 18:23 PST
,
Adele Peterson
no flags
Details
patch
(6.04 KB, patch)
2007-02-27 00:48 PST
,
Adele Peterson
lars.knoll
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adele Peterson
Comment 1
2007-02-26 15:33:58 PST
<
rdar://problem/5012679
> REGRESSION: Pressing return key doesn't move caret to next line after applying a font color in GMail I broke this with my recent event handling change
Adele Peterson
Comment 2
2007-02-26 15:36:11 PST
Looks like after using the Font popup menu, the main frame is focused and the key event for the return key isn't sent to the editable subframe. But the keys are still inserted because of code in Editor::insertText which calls selectionForEvent. selectionForEvent is returning the selection for the page, not the frame. Which I'm not sure is right. But it seems like focus really should be getting set back to the iframe. I'm not sure where that should happen though.
Adele Peterson
Comment 3
2007-02-26 18:23:41 PST
Created
attachment 13388
[details]
test case
Adele Peterson
Comment 4
2007-02-27 00:48:21 PST
Created
attachment 13390
[details]
patch
Adele Peterson
Comment 5
2007-02-27 00:57:23 PST
Committed revision 19879.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug