LayoutTests:

Reviewed by Lars.

        Updated test for http://bugs.webkit.org/show_bug.cgi?id=12902
        <rdar://problem/5012679> REGRESSION: Pressing return key doesn't
        move caret to next line after applying a font color in GMail

        * fast/frames/iframe-window-focus-expected.txt:
        * fast/frames/iframe-window-focus.html: Updated test to include insertion of newlines.

WebCore:

        Reviewed by Lars.

        Fix for http://bugs.webkit.org/show_bug.cgi?id=12902
        <rdar://problem/5012679> REGRESSION: Pressing return key doesn't
        move caret to next line after applying a font color in GMail

        Test: fast/frames/iframe-window-focus-2.html

        * page/EventHandler.h: Make focusDocumentView public.
        * page/Frame.cpp: (WebCore::Frame::focusWindow): Instead of just setting the focused frame,
          we should set also focus the document view.  The bug here was that since the subframe view
          wasn't the first responder, the key down event was going to the wrong frame.



Canonical link: https://commits.webkit.org/16716@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19879 268f45cc-cd09-0410-ab3c-d52691b4dbfc